--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -123,16 +123,6 @@ It is perhaps worth being explicit that our sequences are ordered groups of thin
 
 To make these ideas more precise, we would need to develop some \emph{set theory}, the mathematical theory of collections. This would give you some tools for modelling extensions and ordered pairs (and ordered triples, etc.), as well as some ideas about the metaphysical status of collections and sets. Indeed, set theoretic tools lie at the heart of contemporary linguistic approaches to meaning in natural languages. However, we have neither the time nor the need to cover set theory in this book. I shall leave these notions at an imprecise level; the general idea will be clear enough, I hope. 
 
-\section{Zero-place Predicates} \label{s:zpp}
-
-Consider these examples:  \begin{earg}
-\item[\ex{zeropa}] Coober Pedy is a harsh place. It is remote.
-\item[\ex{zeropb}] Coober Pedy is a harsh place. It is hot.
-In \ref{zeropa}, `it' refers to Coober Pedy. Not so in \ref{zeropb}: `it' in that sentence is a \define{dummy pronoun}, one which needs to be present for syntactic reasons (every English sentence requires a grammatical subject), but which doesn't make any contribution to the meaning of the sentence. They are common with metereological reports: `it is raining', `it is dark', etc. 
-
-\FOL does not have the syntactic feature of English that every sentence must include a singular term. The zero-place predicate `$R$' is a well-formed sentence of \FOL. We can use these zero-place predicates, the atomic sentences of \TFL\ that continue to be part of \FOL, to symbolise sentences like `It is raining'. Indeed, this seems obligatory: the normal symbolisation of a bare pronoun will make use of a free variable. An English sentence like `He is tall' doesn't manage to express a meaningful claim in the absence of some context providing a referent for `he'. So it might be symbolised `$Tx$' – a formula of \FOL\ that is not a sentence – to indicate that we are not expecting this sentence that is being symbolised to be true or false in a given intepretation. To symbolise `it is hot' as `$Hx$' would on these grounds be a mistake: `it is hot' expresses a proposition even without a referent assigned to the pronoun `it', and is true or false in a situation just depending on whether heat is present or not. So it could be adequately symbolised by a zero-place predicate `$H$', which is assigned a truth value in a given intepretation indicating whether it is hot or not. So the extension of a zero-place predicate is a truth value, not a member (or some members) of the domain. In that sense, the interpretations of \FOL\ extend the valuations of \TFL. (Of course, in \TFL\ we use atomic sentences to symbolise many complex subject-predicate sentences that it not be appropriate to symbolise by a zero-place predicate in \FOL.)
-
-
 \section{Semantics for Identity}
 Identity is a special predicate of \FOL. We write it a bit differently than other two-place predicates: `$x=y$' instead of `$Ixy$' (for example). More important, though, its meaning is fixed as to be genuine \emph{identity}, once and for all. Given a domain, the extension of `$=$' comprises just those pairs consisting of any member of the domain and itself. If the domain is numbers, for example, the extension of `$=$' on this domain will be $$\ntuple{1, 1}, \ntuple{2, 2}, \ntuple{3, 3},….$$ 
 
@@ -159,7 +149,8 @@ I defined a \emph{valuation} in \TFL\ as any assignment of truth and falsity to 
 		\item for each name that we care to consider, an assignment of exactly one object within the domain as its extension;
 		\item for each nonlogical $n$-place predicate $\meta{A}$ (i.e., any predicate other than `$=$') that we care to consider, a specification of its extension: what things (or pairs of things, or triples of thing, etc.) the predicate is to be true of – where all those things must be in the domain.
 	\end{itemize}
-A zero-place predicate (what we called `atomic sentences' in \TFL) has a truth value, either T or F, as its extension – thus the valuations of \TFL\ are intepretations of a very restricted part of \FOL\ – those interpretations which only care to consider zero-place predicates.
+
+A zero-place predicate (what we called `atomic sentences' in \TFL) has a truth value, either T or F, as its extension – thus the valuations of \TFL\ are intepretations of a very restricted part of \FOL\ – those interpretations which only care to consider zero-place predicates. Recall from §\ref{s:zpp} that we use zero-place predicates to symbolise English sentences with dummy pronouns. These sentences, such as `it is hot', are in English true or false just depending on the temperature, not how some specific entity is. Our interpretations track such `objectless' features of a possible situation by representing them as either holding or failing to hold, that is, by a given zero-place predicate being either true of the interpretation, or false of it. So we take the extension of such a predicate to simply be a truth value.
 
 The symbolisation keys that I considered in chapter \ref{ch.FOL} consequently give us one very convenient way to present an interpretation. We shall continue to use them throughout this chapter. It is important to note, however, that the symbolisation key tends to associate each predicate with an already understood predicate (in English), and then uses that predicate as a classification rule to determine the extension of the predicate. We can, and sometimes do, offer an interpretation by simply giving the extensions of the intepreted \FOL\ expressions directly. We can simply list the items, pairs, triples, etc., in the extension assigned to a predicate. So the following two symbolisation keys give the same intepretation: 
 \begin{itemize}
