--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -11,7 +11,7 @@
 
 \FOL\ makes use of all of the connectives of \TFL. Helpfully, our natural deduction proof system for \FOL\ will simply import all of the basic rules from chapter \ref{ch.NDTFL}. (Obviously we will get all of the derived rules for free by doing this, but we won't make use of the derived rules.) We will define a correctly formed natural deduction proof for \FOL\ to be a structured sequence of sentences of \FOL\ such that each sentence is either an assumption or follows from the previous sentences by any of the \TFL\ rules \emph{or} by any of the new rules governing the quantifiers and identity that we will introduce in this chapter.\footnote{Though there is a category `formulae which are not sentences' in \FOL, no member of this class will ever appear in any correctly formed proof.} 
 
-The notion of provability of \meta{A} from undischarged assumptions $\meta{C}_{1},…,\meta{C}_{n}$ was introduced for \TFL\ in §\ref{s:ProofTheoreticConcepts}. The rules for \FOL\ are different, but the earlier definitions go through unchanged, once we remember that the notion of proof in \FOL\ means involves a sequence of \FOL\ sentences justified by the rules for \TFL\ \emph{and} those for \FOL. 
+The notion of provability of \meta{A} from undischarged assumptions $\meta{C}_{1},…,\meta{C}_{n}$ was introduced for \TFL\ in §\ref{s:ProofTheoreticConcepts}. The rules for \FOL\ are different, but the earlier definitions go through unchanged, once we remember that the notion of proof in \FOL\ involves a sequence of \FOL\ sentences justified by the rules for \TFL\ \emph{and} those for \FOL. 
 
 So in what follows I will make use of the single turnstile `$\proves$' to mean that there is a correctly formed proof using only the rules of \TFL\ and \FOL. (And once we introduce the identity rules in §\ref{ch.identity}, I will tacitly assume that proofs can make use of those rules too in justifying a claim using `$\proves$'.) 
 
