couple of small typos

--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -1459,7 +1459,7 @@ If conditional proof were a good way of arguing in English, we could convert thi
 \end{earg}
 This sentence is, intuitively, true, no matter what $\meta{A}$ and $\meta{B}$ are. If that disjunction of $\meta{B}$ and the falsehood of \meta{A} is true along with \meta{A}, then it must be because the disjunct \meta{B} holds. But apply exportation to \ref{impexpa}, and we obtain:
 \begin{earg}
-	\item[\ex{impexpb}] If [either $\meta{B}$ or not-$\meta{A}$], then (if $\meta{A}$) then $\meta{B})$. 
+	\item[\ex{impexpb}] If [either $\meta{B}$ or not-$\meta{A}$], then (if $\meta{A}$ then $\meta{B})$. 
 \end{earg} If every instance of \ref{impexpa} is true in English, and \ref{impexpb} follows by a valid principle governing the meaning of `if', then every instance of \ref{impexpb} is true in English. But the antecedent of \ref{impexpb} is just the truth conditions of the material conditional `$\eif$'. And we already know that `if $\meta{A}$ then $\meta{B}$' implies in English `Either $\meta{B}$ or not-$\meta{A}$'. So we would get the result that `if $\meta{A}$ then $\meta{B}$' is equivalent in English to the material conditional `either $\meta{B}$ or not-$\meta{A}$'.}
 
 There is much more to be said about this example. What is beyond doubt is that {\eif}I is a good rule for \TFL, regardless of the fortunes of conditional proof in English. It does seem that instances of conditional proof in mathematical reasoning are all acceptable, which again shows the roots of natural deduction as a formalisation of existing mathematical practice. This would suggest that \eif\ might be a good representation of mathematical uses of `if'.
