--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -439,7 +439,7 @@ The common feature of these three kinds of sentence is that they cannot be used 
 The general point is that the premises and conclusion of an argument must be sentences that are capable of having a \define{truth value}. The notions of validity and conclusiveness are defined in terms of truth preservation, so these properties depend on the constituents of arguments being the kinds of things which have a truth value.
 \factoidbox{A \define{declarative sentences} (like ‘Bob is singing’) states how things are or could be; it is a sentence that is either true or false.}
 
-The two truth values that concern us are just \define{True} and \define{False}. We may not know which truth value a declarative sentence has, but we generally know what kinds of conditions would need to obtain in order for it to be true or false. (We thus have no need of a supposed intermediate truth value like `unknown' – that would reflect our attitudes or beliefs about a claim, whereas the truth value reflects how things really are independently of our attitudes or beliefs.)
+The two truth values that concern us are just \define{true} and \define{false}. We may not know which truth value a declarative sentence has, but we generally know what kinds of conditions would need to obtain in order for it to be true or false. (We thus have no need of a supposed intermediate truth value like `unknown' – that would reflect our attitudes or beliefs about a claim, whereas the truth value reflects how things really are independently of our attitudes or beliefs.)
 
 To form part of an argument, a sentence must have the kind of grammatical structure that permits it to have a truth value. In terms of the notion of structure introduced in §\ref{s:conclusiveargs}, we are going to focus on those structures which yield a declarative sentence when supplied with declarative sentences. For example `it is not the case that \meta{A}' yields a declarative sentence whenever we put a declarative sentence in for \meta{A}, and may not yield anything grammatical at all otherwise: \begin{earg}
 	\item[\ex{decl1}] It is not the case that \underline{dogs can fly}. (Declarative, true)
