couple of typos fixed, acknowledgement updated

--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -706,7 +706,7 @@ To symbolise this sentence in \TFL, we would offer something like `$\enot (J \eo
 	\begin{earg}
 		\item[\ex{n:JanBald2}]  Jan is both not-bald and also bald.
 	\end{earg}
-It is so obvious, though, that \ref{n:JanBald} is synonymous with \ref{n:JanBald2}? It seems like it may not be, even though our test will classify any English argument from one to the other as valid (since both are symbolised as logical falsehoods, which degenerately entail anything). 
+Is it equally obvious, though, that \ref{n:JanBald} is synonymous with \ref{n:JanBald2}? It seems like it may not be, even though our test will classify any English argument from one to the other as valid (since both are symbolised as logical falsehoods, which degenerately entail anything). 
 
 Because of the way we have defined valuations, \emph{every} sentence of \TFL\ is assigned either True or False in any valuation which makes it meaningful by assigning truth values to its atomic sentences. This property of \TFL\ is known as \define{bivalence}: that every sentence has exactly one of the two possible truth values. The case of Jan's baldness (or otherwise) raises the general question of what logic we should use when dealing with \emph{vague} discourse, properties like `bald' or `tall' which seem to have borderline cases. Many think it plausible that a borderline case of F is neither a case of F, nor does it fail to be a case of F. Hence they have been tempted to deny bivalence for English: `Jan is bald', they say, is neither True nor False! If $p$ is neither true nor false, then it is hardly surprising that `$p$ or not-$p$' turns out to be untrue. If these thinkers are right that vagueness in English leads to the denial of bivalence, while \TFL\ is bivalent, this will give rise to mismatches between English and \TFL. These mismatches will not involve inadequate symbolisation, but a more fundamental disagreement about the background framework – here, a disagreement about the nature of truth.\footnote{For more on the logic of vagueness, see Roy Sorensen's 2018 entry `Vagueness' in \emph{The Stanford Encyclopedia of Philosophy} (\httpurl{plato.stanford.edu/entries/vagueness/}). He discusses views that deny bivalence in §5.} 
 
